# AliasingOperatorExperiments

./: README.md  active-learning.ipynb  bernoulli.ipynb  cifar-bigger-conv-basis.ipynb  cifar-conv-basis.ipynb  cifar_cnn.py  grevilles.py  legendre.ipynb  leverage-scores-vs-uniform.ipynb  main.ipynb  mnist-conv-basis-classification.ipynb  mnist-conv-basis.ipynb  pyproject.toml
helpers/: mnist-conv-basis.ipynb
models/: cifar_cnn.pth  cifar_cnn.py  mnist_cnn.pth  mnist_cnn.py  mnist_cnn_R10.pth  mnist_cnn_R100.pth  mnist_cnn_R150.pth  mnist_cnn_R20.pth  mnist_cnn_R200.pth  mnist_cnn_R250.pth  mnist_cnn_R300.pth  mnist_cnn_R50.pth
training_info/: mnist_cnn_R10_info.json
