[project]
name = "aliasingoperatorexperiments"
version = "0.1.0"
description = "Experiments for aliasing operators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphlearning>=1.7.4", # for easy access to MNIST, CIFAR10 datasets
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
]
